Add service plugin to avoid external Gradle Docker plugin