@@ -1,13 +1,17 @@
 plugins {
     id "java"
     id "idea"
-    id "application"
     id "org.inferred.processors" version "1.2.3"
-    id "com.palantir.docker" version "0.9.1"
     id "com.palantir.configuration-resolver" version "0.1.0"
 }
 
-apply from: "../gradle/distribution.gradle"
+apply plugin: io.quartic.gradle.ServicePlugin
+
+service {
+    simpleName = "weyl"
+    mainClassName = "io.quartic.weyl.WeylApplication"
+    memory = System.env.WEYL_MEMORY ?: "8g"
+}
 
 dependencies {
     processor libraries.immutables
@@ -24,26 +28,4 @@ dependencies {
 
     testCompile libraries.testCommon
     testCompile "io.dropwizard:dropwizard-testing:${versions.dropwizard}"
-}
-
-jar {
-    manifest {
-        attributes("Implementation-Version": version)
-    }
-}
-
-ext.memorySetting = System.env.WEYL_MEMORY ?: "8g"
-
-mainClassName = "io.quartic.weyl.WeylApplication"
-applicationDefaultJvmArgs = ["-Xms${memorySetting}", "-Xmx${memorySetting}", "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", "-Xloggc:mygclogfilename.gc"]
-
-
-run {
-  args = ["server", "weyl.yml"]
-}
-
-docker {
-  name      "${System.env.QUARTIC_DOCKER_REPOSITORY}/weyl:${version}"
-  dependsOn distTar
-  files     "build.gradle"    // Seems to be no way to say "no files", so using this as dummy
 }
